--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
+dateparser==0.4.0
 dj-database-url==0.4.1
 dj-static==0.0.6
 Django==1.10.1
 django-angular==0.8.4
 gunicorn==19.6.0
+jdatetime==1.8.1
 mysqlclient==1.3.7
+python-dateutil==2.5.3
+pytz==2016.6.1
+regex==2016.8.27
 requests==2.11.1
+ruamel.ordereddict==0.4.9
+ruamel.yaml==0.12.12
+six==1.10.0
 static3==0.7.0
+typing==3.5.2.2
+umalqurra==0.2
 xlrd==1.0.0
