--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.4.1
 dj-static==0.0.6
 Django==1.10.1
 django-angular==0.8.4
+django_compressor==2.1
 gunicorn==19.6.0
 jdatetime==1.8.1
 mysqlclient==1.3.7
