--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "angular-translate": "^2.11.0",
     "angular-translate-loader-static-files": "^2.11.1",
     "angular-translate-storage-cookie": "^2.11.1",
-    "moment": "^2.15.0"
+    "moment": "^2.15.0",
+    "moment-timezone": "^0.5.6"
   },
   "resolutions": {
     "angular": "^1.5.8"
